# gainput

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CNAME  Doxyfile  LICENSE  README.md  gainput.pro  index.html  msvs.py  waf  waf.bat  wafenv.bat  wscript
api/: GainputAllocator_8h_source.html  GainputButtonStickGesture_8h_source.html  GainputContainers_8h_source.html  GainputDebugRenderer_8h_source.html  GainputDoubleClickGesture_8h_source.html  GainputGestures_8h_source.html  GainputHelpers_8h_source.html  GainputHoldGesture_8h_source.html  GainputInputDeltaState_8h_source.html  GainputInputDeviceBuiltIn_8h_source.html  GainputInputDeviceKeyboardWin_8h_source.html  GainputInputDeviceKeyboard_8h_source.html  GainputInputDeviceMouseWin_8h_source.html  GainputInputDeviceMouse_8h_source.html  GainputInputDevicePad_8h_source.html  GainputInputDeviceTouch_8h_source.html  GainputInputDevice_8h_source.html  GainputInputGesture_8h_source.html  GainputInputListener_8h_source.html  GainputInputManager_8h_source.html  GainputInputMap_8h_source.html  GainputInputPlayer_8h_source.html  GainputInputRecorder_8h_source.html  GainputIos_8h_source.html  (+205 more)
lib/: CMakeLists.txt  lib.pro
lib/include/gainput/: GainputAllocator.h  GainputContainers.h  GainputDebugRenderer.h  GainputHelpers.h  GainputInputDevice.h  GainputInputDeviceBuiltIn.h  GainputInputDeviceKeyboard.h  GainputInputDeviceMouse.h  GainputInputDevicePad.h  GainputInputDeviceTouch.h  GainputInputGesture.h  GainputInputListener.h  GainputInputManager.h  GainputInputMap.h  GainputInputState.h  GainputIos.h  GainputLog.h  gainput.h
lib/include/gainput/gestures/: GainputButtonStickGesture.h  GainputDoubleClickGesture.h  GainputGestures.h  GainputHoldGesture.h  GainputPinchGesture.h  GainputRotateGesture.h  GainputSimultaneouslyDownGesture.h  GainputTapGesture.h
lib/include/gainput/recorder/: GainputInputPlayer.h  GainputInputRecorder.h  GainputInputRecording.h
lib/java/de/johanneskuhlmann/gainput/: Gainput.java
lib/source/gainput/: GainputAllocator.cpp  GainputHelpers.h  GainputHelpersEvdev.h  GainputInputDeltaState.cpp  GainputInputDeltaState.h  GainputInputDevice.cpp  GainputInputDeviceKeyboardAndroid.cpp  GainputInputDeviceKeyboardLinux.cpp  GainputInputDeviceKeyboardWin.cpp  GainputInputDeviceKeyboardWin.h  GainputInputDeviceMouseLinux.cpp  GainputInputDeviceMouseWin.cpp  GainputInputDeviceMouseWin.h  GainputInputDevicePadAndroid.cpp  GainputInputDevicePadLinux.cpp  GainputInputDevicePadWin.cpp  GainputInputDeviceTouchAndroid.cpp  GainputInputDeviceTouchAndroid.h  GainputInputManager.cpp  GainputInputMap.cpp  GainputInputState.cpp  GainputIos.mm  GainputKeyboardKeyNames.h  GainputLog.h  GainputMac.mm  GainputMapFilters.cpp  GainputWindows.h  gainput.cpp
lib/source/gainput/builtin/: GainputInputDeviceBuiltIn.cpp  GainputInputDeviceBuiltInAndroid.h  GainputInputDeviceBuiltInIos.h  GainputInputDeviceBuiltInIos.mm  GainputInputDeviceBuiltInNull.h
lib/source/gainput/dev/: GainputDev.cpp  GainputDev.h  GainputDevProtocol.h  GainputMemoryStream.cpp  GainputMemoryStream.h  GainputNetAddress.cpp  GainputNetAddress.h  GainputNetConnection.cpp  GainputNetConnection.h  GainputNetListener.cpp  GainputNetListener.h  GainputStream.h
lib/source/gainput/gestures/: GainputButtonStickGesture.cpp  GainputDoubleClickGesture.cpp  GainputHoldGesture.cpp  GainputPinchGesture.cpp  GainputRotateGesture.cpp  GainputSimultaneouslyDownGesture.cpp  GainputTapGesture.cpp
lib/source/gainput/keyboard/: GainputInputDeviceKeyboard.cpp  GainputInputDeviceKeyboardAndroid.cpp  GainputInputDeviceKeyboardAndroid.h  GainputInputDeviceKeyboardEvdev.cpp  GainputInputDeviceKeyboardEvdev.h  GainputInputDeviceKeyboardImpl.h  GainputInputDeviceKeyboardLinux.cpp  GainputInputDeviceKeyboardLinux.h  GainputInputDeviceKeyboardMac.cpp  GainputInputDeviceKeyboardMac.h  GainputInputDeviceKeyboardNull.h  GainputInputDeviceKeyboardWin.cpp  GainputInputDeviceKeyboardWin.h  GainputInputDeviceKeyboardWinRaw.h  GainputKeyboardCommon.h  GainputKeyboardKeyNames.h
lib/source/gainput/mouse/: GainputInputDeviceMouse.cpp  GainputInputDeviceMouseEvdev.cpp  GainputInputDeviceMouseEvdev.h  GainputInputDeviceMouseImpl.h  GainputInputDeviceMouseLinux.cpp  GainputInputDeviceMouseLinux.h  GainputInputDeviceMouseMac.h  GainputInputDeviceMouseMac.mm  GainputInputDeviceMouseNull.cpp  GainputInputDeviceMouseNull.h  GainputInputDeviceMouseWin.cpp  GainputInputDeviceMouseWin.h  GainputInputDeviceMouseWinRaw.cpp  GainputInputDeviceMouseWinRaw.h  GainputMouseCommon.h  GainputMouseInfo.h
lib/source/gainput/pad/: GainputInputDevicePad.cpp  GainputInputDevicePadAndroid.cpp  GainputInputDevicePadAndroid.h  GainputInputDevicePadImpl.h  GainputInputDevicePadIos.h  GainputInputDevicePadIos.mm  GainputInputDevicePadLinux.cpp  GainputInputDevicePadLinux.h  GainputInputDevicePadMac.cpp  GainputInputDevicePadMac.h  GainputInputDevicePadNull.h  GainputInputDevicePadWin.cpp  GainputInputDevicePadWin.h  GainputPadCommon.h  GainputPadInfo.h
lib/source/gainput/recorder/: GainputInputPlayer.cpp  GainputInputRecorder.cpp  GainputInputRecording.cpp
lib/source/gainput/touch/: GainputInputDeviceTouch.cpp  GainputInputDeviceTouchAndroid.cpp  GainputInputDeviceTouchAndroid.h  GainputInputDeviceTouchImpl.h  GainputInputDeviceTouchIos.h  GainputInputDeviceTouchNull.cpp  GainputInputDeviceTouchNull.h  GainputInputDeviceTouchWin.h  GainputInputDeviceTouchWindows.h  GainputTouchCommon.h  GainputTouchInfo.h
samples/basic/: CMakeLists.txt  basicsample.cpp  basicsample_android.cpp  basicsample_linux.cpp  basicsample_mac.cpp  basicsample_win.cpp  wscript
samples/dynamic/: CMakeLists.txt  dynamicsample.cpp  wscript
samples/gesture/: CMakeLists.txt  gesturesample.cpp  wscript
samples/listener/: CMakeLists.txt  listenersample.cpp  wscript
samples/recording/: CMakeLists.txt  recordingsample.cpp  wscript
samples/sync/: CMakeLists.txt  syncsample.cpp  wscript
test/: CMakeLists.txt  test.cpp  test_inputdevice.cpp  test_inputmanager.cpp  test_inputmap.cpp  test_inputrecording.cpp  test_inputstate.cpp  wscript
(+154 files in other folders)
